<?xml version="1.0" encoding="utf-8"?>
<!-- Main LinearLayout wrapped in a ScrollView to enable scrolling -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Apply Filter button-->
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply Filter"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category"
            android:textStyle="bold" />

        <!-- Chips for categories -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/categoryChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Brand"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <!-- Chips for brands -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/brandChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

</ScrollView>
